// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Theming ThemeSwither 1`] = `
<div
  className="story"
  style={
    Object {
      "WebkitFontSmoothing": "antialiased",
      "color": "#444",
      "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
    }
  }
>
  <div
    className="story-header"
    style={
      Object {
        "color": "#565d6b",
        "fontSize": 14,
        "lineHeight": 1.5,
      }
    }
  >
    <div>
      <h1
        className="story-title"
        style={
          Object {
            "color": "#363a45",
            "fontSize": 36,
            "marginBottom": 10,
          }
        }
      >
        ThemeSwither
      </h1>
      <span
        className="story-subtitle"
        style={
          Object {
            "color": "#898d97",
            "fontSize": 18,
            "marginBottom": 20,
            "marginTop": 0,
          }
        }
      >
        Show how to use &lt;ThemedSample /&gt; component with &lt;ThemeSwither&gt;. By clicking on ThemeSwitcher buttons you can enable/disable alternative themes
      </span>
      
    </div>
  </div>
  <div>
    <div
      className="chapter-header"
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        
        
        
        
      </div>
    </div>
    <div
      className="section-container"
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        className="section-header"
        style={Object {}}
      >
        <div>
          <div>
            
            
          </div>
        </div>
      </div>
      <div
        className="section-component-container"
        style={Object {}}
      >
        <form>
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "inherit",
              }
            }
            type="button"
          >
            0
          </button>
          <button
            onClick={[Function]}
            style={
              Object {
                "background": "inherit",
              }
            }
            type="button"
          >
            1
          </button>
        </form>
        <hr />
        <div
          style={
            Object {
              "color": "#46515e",
              "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
              "lineHeight": "1.4",
            }
          }
        >
          colorTextPrimary: 
          #46515e
          <br />
          fontFamily: 
          "Roboto", -apple-system, ".SFNSText-Regular", "San Francisco", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif
          <br />
          lineHeightText: 
          1.4
          <br />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              className="section-subsection"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                className="section-subsection-title"
                style={undefined}
              >
                Source
              </h4>
              <pre
                className="css-4akams"
              >
                <div>
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ThemeSwither
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            themes
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                [
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        colorTextPrimary
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'green'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ,
                                <span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    {
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        colorTextPrimary
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'purple'
                                    </span>
                                    ,
                                    <span>
                                      <span
                                        style={
                                          Object {
                                            "color": "#666",
                                          }
                                        }
                                      >
                                        fontFamily
                                      </span>
                                    </span>
                                    : 
                                    <span
                                      style={
                                        Object {
                                          "color": "#22a",
                                          "wordBreak": "break-word",
                                        }
                                      }
                                    >
                                      'Times, serif'
                                    </span>
                                    }
                                  </span>
                                </span>
                                ]
                              </span>
                              }
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ThemedComponent
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        ThemeSwither
                        &gt;
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  className="css-gydez8"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Theming With ThemeProvider 1`] = `
<div
  className="story"
  style={
    Object {
      "WebkitFontSmoothing": "antialiased",
      "color": "#444",
      "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
    }
  }
>
  <div
    className="story-header"
    style={
      Object {
        "color": "#565d6b",
        "fontSize": 14,
        "lineHeight": 1.5,
      }
    }
  >
    <div>
      <h1
        className="story-title"
        style={
          Object {
            "color": "#363a45",
            "fontSize": 36,
            "marginBottom": 10,
          }
        }
      >
        With ThemeProvider
      </h1>
      <span
        className="story-subtitle"
        style={
          Object {
            "color": "#898d97",
            "fontSize": 18,
            "marginBottom": 20,
            "marginTop": 0,
          }
        }
      >
        Show how to use &lt;ThemedSample /&gt; component with &lt;ThemeProvider&gt;.
              Note that &lt;WithTheme(ComponentWithTheme)/&gt; = &lt;ThemedSample /&gt; in sources
      </span>
      
    </div>
  </div>
  <div>
    <div
      className="chapter-header"
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        
        
        
        
      </div>
    </div>
    <div
      className="section-container"
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        className="section-header"
        style={Object {}}
      >
        <div>
          <div>
            <h3
              className="section-title"
              style={
                Object {
                  "color": "#363a45",
                  "fontSize": 18,
                  "marginBottom": 10,
                }
              }
            >
              Basic usage
            </h3>
            <p
              className="section-subtitle"
              style={
                Object {
                  "color": "#898d97",
                  "fontSize": 14,
                  "marginBottom": 20,
                  "marginTop": 0,
                }
              }
            >
              Provider use default tokens
            </p>
          </div>
        </div>
      </div>
      <div
        className="section-component-container"
        style={Object {}}
      >
        <div
          style={
            Object {
              "color": "#46515e",
              "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
              "lineHeight": "1.4",
            }
          }
        >
          colorTextPrimary: 
          #46515e
          <br />
          fontFamily: 
          "Roboto", -apple-system, ".SFNSText-Regular", "San Francisco", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif
          <br />
          lineHeightText: 
          1.4
          <br />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              className="section-subsection"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                className="section-subsection-title"
                style={undefined}
              >
                Source
              </h4>
              <pre
                className="css-4akams"
              >
                <div>
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ThemeProvider
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ThemedComponent
                      </span>
                      <span />
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        ThemeProvider
                        &gt;
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  className="css-gydez8"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="section-container"
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        className="section-header"
        style={Object {}}
      >
        <div>
          <div>
            <h3
              className="section-title"
              style={
                Object {
                  "color": "#363a45",
                  "fontSize": 18,
                  "marginBottom": 10,
                }
              }
            >
              Alt theme
            </h3>
            <p
              className="section-subtitle"
              style={
                Object {
                  "color": "#898d97",
                  "fontSize": 14,
                  "marginBottom": 20,
                  "marginTop": 0,
                }
              }
            >
              Provide alternate theme for component using second ThemeProvider.
                       Note that altTheme can contains only some tokens.
                       This is usefull in development when you want to try defferent value for some value
            </p>
          </div>
        </div>
      </div>
      <div
        className="section-component-container"
        style={Object {}}
      >
        <div
          style={
            Object {
              "color": "green",
              "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
              "lineHeight": "1.4",
            }
          }
        >
          colorTextPrimary: 
          green
          <br />
          fontFamily: 
          "Roboto", -apple-system, ".SFNSText-Regular", "San Francisco", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif
          <br />
          lineHeightText: 
          1.4
          <br />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              className="section-subsection"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                className="section-subsection-title"
                style={undefined}
              >
                Source
              </h4>
              <pre
                className="css-4akams"
              >
                <div>
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ThemeProvider
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            theme
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span>
                                  <span>
                                    <br />
                                      
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    colorTextInfo
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  '#0176D2'
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                      
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    colorTextPrimary
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  '#46515e'
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                      
                                      
                                  </span>
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    colorTextSecondary
                                  </span>
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  '#7f91a8'
                                </span>
                                ,
                                <span>
                                  <span>
                                    <br />
                                      
                                      
                                  </span>
                                  …
                                </span>
                                <span>
                                  <br />
                                    
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ThemeProvider
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              theme
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  {
                                  <span>
                                    <span
                                      style={
                                        Object {
                                          "color": "#666",
                                        }
                                      }
                                    >
                                      colorTextPrimary
                                    </span>
                                  </span>
                                  : 
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    'green'
                                  </span>
                                  }
                                </span>
                                }
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 48,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          ThemedComponent
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          ThemeProvider
                          &gt;
                        </span>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        ThemeProvider
                        &gt;
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  className="css-gydez8"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Theming Without ThemeProvider 1`] = `
<div
  className="story"
  style={
    Object {
      "WebkitFontSmoothing": "antialiased",
      "color": "#444",
      "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
    }
  }
>
  <div
    className="story-header"
    style={
      Object {
        "color": "#565d6b",
        "fontSize": 14,
        "lineHeight": 1.5,
      }
    }
  >
    <div>
      <h1
        className="story-title"
        style={
          Object {
            "color": "#363a45",
            "fontSize": 36,
            "marginBottom": 10,
          }
        }
      >
        Without ThemeProvider
      </h1>
      <span
        className="story-subtitle"
        style={
          Object {
            "color": "#898d97",
            "fontSize": 18,
            "marginBottom": 20,
            "marginTop": 0,
          }
        }
      >
        Show how to use &lt;RawComponent /&gt; without &lt;ThemeProvider&gt;
      </span>
      
    </div>
  </div>
  <div>
    <div
      className="chapter-header"
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        
        
        
        
      </div>
    </div>
    <div
      className="section-container"
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        className="section-header"
        style={Object {}}
      >
        <div>
          <div>
            <h3
              className="section-title"
              style={
                Object {
                  "color": "#363a45",
                  "fontSize": 18,
                  "marginBottom": 10,
                }
              }
            >
              RawComponent
            </h3>
            
          </div>
        </div>
      </div>
      <div
        className="section-component-container"
        style={Object {}}
      >
        <div
          style={
            Object {
              "color": "#46515e",
              "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
              "lineHeight": "1.4",
            }
          }
        >
          colorTextPrimary: 
          #46515e
          <br />
          fontFamily: 
          "Roboto", -apple-system, ".SFNSText-Regular", "San Francisco", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif
          <br />
          lineHeightText: 
          1.4
          <br />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              className="section-subsection"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                className="section-subsection-title"
                style={undefined}
              >
                Source
              </h4>
              <pre
                className="css-4akams"
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      ComponentWithTheme
                    </span>
                    <span />
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  className="css-gydez8"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="section-container"
      style={
        Object {
          "marginBottom": 100,
        }
      }
    >
      <div
        className="section-header"
        style={Object {}}
      >
        <div>
          <div>
            <h3
              className="section-title"
              style={
                Object {
                  "color": "#363a45",
                  "fontSize": 18,
                  "marginBottom": 10,
                }
              }
            >
              RawComponent with props
            </h3>
            <p
              className="section-subtitle"
              style={
                Object {
                  "color": "#898d97",
                  "fontSize": 14,
                  "marginBottom": 20,
                  "marginTop": 0,
                }
              }
            >
              Provide alternate theme for component.
                       Note that theme have to contains all tokens and is created using Object.assign function.
            </p>
          </div>
        </div>
      </div>
      <div
        className="section-component-container"
        style={Object {}}
      >
        <div
          style={
            Object {
              "color": "red",
              "fontFamily": "Courier",
              "lineHeight": "1.4",
            }
          }
        >
          colorTextPrimary: 
          red
          <br />
          fontFamily: 
          Courier
          <br />
          lineHeightText: 
          1.4
          <br />
        </div>
      </div>
      <div>
        <div>
          <div>
            
            <div
              className="section-subsection"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <h4
                className="section-subsection-title"
                style={undefined}
              >
                Source
              </h4>
              <pre
                className="css-4akams"
              >
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 18,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      ComponentWithTheme
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          theme
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            {
                            <span
                              style={
                                Object {
                                  "color": "#666",
                                }
                              }
                            >
                              {
                              <span>
                                <span>
                                  <br />
                                    
                                    
                                </span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  colorTextInfo
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                '#0176D2'
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                    
                                    
                                </span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  colorTextPrimary
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                'red'
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                    
                                    
                                </span>
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  colorTextSecondary
                                </span>
                              </span>
                              : 
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                '#7f91a8'
                              </span>
                              ,
                              <span>
                                <span>
                                  <br />
                                    
                                    
                                </span>
                                …
                              </span>
                              <span>
                                <br />
                                  
                              </span>
                              }
                            </span>
                            }
                          </span>
                        </span>
                         
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      /&gt;
                    </span>
                  </div>
                </div>
                <button
                  className="css-gydez8"
                  onClick={[Function]}
                >
                  <div
                    className="css-kv47nt"
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": 6,
                        }
                      }
                    >
                      Copied!
                    </div>
                    <div>
                      Copy
                    </div>
                  </div>
                </button>
              </pre>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
